--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,58 +20,59 @@ notify_approval:
   only:
     - main
 
-# Development environment deployment job
-# deploy_nacos_config:
-#   stage: deploy
-#   image: python:3.9-slim
-#   tags:
-#     - docker
-#   before_script:
-#     - pip install --no-cache-dir -r requirements.txt
-#   script:
-#     - chmod +x *.sh
-#     - python nacos_backup.py
-#     - python nacos_setup.py
-#     - sleep 2
-#     - python nacos_diff.py
-#   only:
-#     - main
-#   artifacts:
-#     paths:
-#       - export/
 
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-#     - if: '$CI_COMMIT_TAG'
-#       when: manual
-#     - if: '$CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "master"'
-#       when: manual
-#     - if: '$CI_COMMIT_BRANCH == "ci"'
-#       when: manual
+# Deploy Nacos Configuration
+deploy_nacos_config:
+  stage: deploy
+  image: python:3.9-slim
+  tags:
+    - docker
+  before_script:
+    - pip install --no-cache-dir -r requirements.txt
+  script:
+    - chmod +x *.sh
+    - python nacos_backup.py
+    - python nacos_setup.py
+    - sleep 2
+    - python nacos_diff.py
+  only:
+    - main
+  artifacts:
+    paths:
+      - export/
+
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+    - if: '$CI_COMMIT_TAG'
+      when: manual
+    - if: '$CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "master"'
+      when: manual
+    - if: '$CI_COMMIT_BRANCH == "ci"'
+      when: manual
 
 
-# notify_success:
-#   stage: notify
-#   image: python:3.9-slim
-#   tags:
-#     - docker
-#   before_script:
-#     - pip install --no-cache-dir -r requirements.txt
-#   script:
-#     - python discord_notify.py "Nacos 配置發布成功！" "success"
-#   when: on_success
-#   only:
-#     - main
+notify_success:
+  stage: notify
+  image: python:3.9-slim
+  tags:
+    - docker
+  before_script:
+    - pip install --no-cache-dir -r requirements.txt
+  script:
+    - python discord_notify.py "Nacos 配置發布成功！" "success"
+  when: on_success
+  only:
+    - main
 
-# notify_failure:
-#   stage: notify
-#   image: python:3.9-slim
-#   tags:
-#     - docker
-#   before_script:
-#     - pip install --no-cache-dir -r requirements.txt
-#   script:
-#     - python discord_notify.py "Nacos 配置發布失敗！" "failure"
-#   when: on_failure
-#   only:
-#     - main
+notify_failure:
+  stage: notify
+  image: python:3.9-slim
+  tags:
+    - docker
+  before_script:
+    - pip install --no-cache-dir -r requirements.txt
+  script:
+    - python discord_notify.py "Nacos 配置發布失敗！" "failure"
+  when: on_failure
+  only:
+    - main
