--- a/import/xh/perpetual/perpetual-api.yml
+++ b/import/xh/perpetual/perpetual-api.yml
@@ -1,10 +1,19 @@
 spring:
   kafka:
+    bootstrap-servers: ${spring_kafka_bootstrap_ip:15.220.82.106:9092}
     consumer:
+      group-id: ${spring.application.name}
       enable-auto-commit: false
+    producer:
+      retries: 3
+      acks: all
     listener:
       ack-mode: MANUAL
       missing-topics-fatal: false
+    admin:
+      auto-create: true
+      properties:
+        auto.create.topics.enable: true
   cache:
     type: redis
     redis:
@@ -17,13 +26,13 @@ server:
     # IO 線程數，負責處理非阻塞 I/O 操作，建議設置為 CPU 核心數的 1~2 倍
     io-threads: 8
     # Worker 線程數，負責處理業務邏輯，建議設置為 CPU 核心數 * 8 或更高
-    worker-threads: 400
+    worker-threads: 128
     # 每個線程的連線佇列大小，防止連線過多時拒絕請求
     max-http-post-size: 10485760  # 10MB，根據需求調整
     # 最大並發請求數，根據 TPS 和響應時間估算
-    max-connections: 1000
+    max-connections: 100
     # 緩衝區設定，減少內存壓力
-    buffer-size: 1024  # 16KB
+    buffer-size: 16384  # 16KB
     direct-buffers: true  # 使用直接內存，減少 GC 壓力
     # 啟用 HTTP/2，提升高併發性能
     enable-http2: true
@@ -32,8 +41,7 @@ server:
     # 禁用不必要的日誌以提升性能
     accesslog:
       enabled: false
-  max-http-header-size: 16KB    
-
+ 
 powerjob:
   worker:
     enabled: true    
