ci: fix env setup

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Nacos Configuration
-# NACOS_SERVER_ADDR=
-# NACOS_USERNAME=
-# NACOS_PASSWORD=
-# NACOS_AUTH_ENABLED=true
+NACOS_SERVER_ADDR=43.163.0.78:8848
+NACOS_USERNAME=nacos
+NACOS_PASSWORD=nacos
+NACOS_AUTH_ENABLED=true
 
 # Delete configuration files that are not in the export folder if NACOS_DELETE_EXPORT_ONLY is true
-# NACOS_DELETE_EXPORT_ONLY=false
+NACOS_DELETE_EXPORT_ONLY=false
 
 # Discord Configuration
-# DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/1379690123586961619/Asfk3ZaSTP_Olftr4qzyj_PVQK-IxxOQMqm_13AZvOYkRmHuZfrBegNc4OAklyBdDztR
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/1379690123586961619/Asfk3ZaSTP_Olftr4qzyj_PVQK-IxxOQMqm_13AZvOYkRmHuZfrBegNc4OAklyBdDztR
